refactor: move /events/public to /event-types/public/:username/:eventSlug
