# apps/api/v2/src/ee/event-types/controllers/event-types.controller.ts
@@ -1,4 +1,5 @@
 import { CreateEventTypeInput } from "@/ee/event-types/inputs/create-event-type.input";
+import { GetPublicEventTypeQueryParams } from "@/ee/event-types/inputs/get-public-event-type-query-params.input";
 import { UpdateEventTypeInput } from "@/ee/event-types/inputs/update-event-type.input";
 import { CreateEventTypeOutput } from "@/ee/event-types/outputs/create-event-type.output";
 import { DeleteEventTypeOutput } from "@/ee/event-types/outputs/delete-event-type.output";
@@ -11,6 +12,7 @@ import { GetUser } from "@/modules/auth/decorators/get-user/get-user.decorator";
 import { Permissions } from "@/modules/auth/decorators/permissions/permissions.decorator";
 import { AccessTokenGuard } from "@/modules/auth/guards/access-token/access-token.guard";
 import { PermissionsGuard } from "@/modules/auth/guards/permissions/permissions.guard";
+import { PrismaReadService } from "@/modules/prisma/prisma-read.service";
 import { UserWithProfile } from "@/modules/users/users.repository";
 import {
   Controller,
@@ -24,11 +26,17 @@ import {
   HttpCode,
   HttpStatus,
   Delete,
+  Query,
+  InternalServerErrorException,
 } from "@nestjs/common";
 import { ApiTags as DocsTags } from "@nestjs/swagger";
 
 import { EVENT_TYPE_READ, EVENT_TYPE_WRITE, SUCCESS_STATUS } from "@calcom/platform-constants";
+import type { PublicEventType } from "@calcom/platform-libraries";
+import { getPublicEvent } from "@calcom/platform-libraries";
 import { getEventTypesByViewer } from "@calcom/platform-libraries";
+import { ApiResponse } from "@calcom/platform-types";
+import { PrismaClient } from "@calcom/prisma";
 
 @Controller({
   path: "event-types",
@@ -37,7 +45,10 @@ import { getEventTypesByViewer } from "@calcom/platform-libraries";
 @UseGuards(PermissionsGuard)
 @DocsTags("Event types")
 export class EventTypesController {
-  constructor(private readonly eventTypesService: EventTypesService) {}
+  constructor(
+    private readonly eventTypesService: EventTypesService,
+    private readonly prismaReadService: PrismaReadService
+  ) {}
 
   @Post("/")
   @Permissions([EVENT_TYPE_WRITE])
@@ -88,6 +99,35 @@ export class EventTypesController {
       status: SUCCESS_STATUS,
       data: eventTypes,
     };
+  }
+
+  @Get("/public/:username/:eventSlug")
+  async getPublicEventType(
+    @Param("username") username: string,
+    @Param("eventSlug") eventSlug: string,
+    @Query() queryParams: GetPublicEventTypeQueryParams
+  ): Promise<ApiResponse<PublicEventType>> {
+    try {
+      const event = await getPublicEvent(
+        username.toLowerCase(),
+        eventSlug,
+        queryParams.isTeamEvent,
+        queryParams.org || null,
+        this.prismaReadService.prisma as unknown as PrismaClient,
+        // We should be fine allowing unpublished orgs events to be servable through platform because Platform access is behind license
+        // If there is ever a need to restrict this, we can introduce a new query param `fromRedirectOfNonOrgLink`
+        true
+      );
+      return {
+        data: event,
+        status: SUCCESS_STATUS,
+      };
+    } catch (err) {
+      if (err instanceof Error) {
+        throw new NotFoundException(err.message);
+      }
+    }
+    throw new InternalServerErrorException("Could not find public event.");
   }
 
   @Get("/public/:username")
